fix: update version to 0.1.0 and correct release-please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,8 @@
         {
           "type": "generic",
           "path": "app/__version__.py",
-          "glob": false
+          "glob": false,
+          "content": "__version__ = \"${version}\"\n"
         }
       ]
     }
